Update Landing page and detail to use Flows to reflect favorite state updates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Quotes</string>
 
     <string name="placeholder_empty">Mmmm…\n\t\tMuch empty\n\t\t\t\t\t\tWow</string>
+    <string name="common_success">Success!</string>
 
     <!--LANDING PAGE-->
     <string name="landing_title">Quote of the moment</string>
